<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="40">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/read_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            app:backgroundTint="#CD141414"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:focusable="true" />

        <ScrollView
            style="@android:style/Widget.DeviceDefault.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:saveEnabled="true"
            android:scrollbarSize="8dp"
            android:scrollbarStyle="insideOverlay"
            android:touchscreenBlocksFocus="true">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="sans-serif"
                android:hint="@string/code_goes_here"
                android:inputType="textMultiLine"
                android:padding="20dp"
                android:paddingBottom="50dp"
                android:text="@string/function_n_tconsole_log_hello_world_n_treturn_document_url_tostring_n"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@color/colorPrimary"
                android:textSize="15sp"
                tools:ignore="RtlCompat"
                android:importantForAutofill="no" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/action_input"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            style="?android:attr/buttonBarButtonStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/copy_input"
                android:focusable="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                style="?android:attr/buttonBarButtonStyle"
                android:drawableTop="?android:attr/actionModeCopyDrawable"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/clr_input"
                style="?android:attr/buttonBarButtonStyle"
                android:focusable="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@android:drawable/ic_notification_clear_all"
                android:onClick="clearActions" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jsButtons_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/jsButtons"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_blue_dark"
            android:orientation="horizontal">

            <Button
                android:id="@+id/run"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:drawableTop="@android:drawable/ic_media_play"
                android:hint="@string/run"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:drawableTop="@android:drawable/ic_menu_save"
                android:hint="@string/save"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/save_as"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:drawableTop="@android:drawable/stat_sys_download"
                android:hint="@string/save_as"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/load"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@android:drawable/ic_menu_gallery"
                android:focusable="true"
                android:hint="@string/load"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
                android:hint="@string/clear"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/toggle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:drawableTop="@android:drawable/ic_menu_more"
                android:hint="@string/toggle"

                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/read"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@android:drawable/ic_menu_sort_by_size"
                android:focusable="true"

                android:hint="@string/read"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/console_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="11"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D3FAE3"
            android:ems="10"
            android:hint="@string/console"
            android:padding="5px"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_purple"
            android:textSize="14sp"
            android:inputType=""
            android:importantForAutofill="no" />

        <LinearLayout
            android:id="@+id/action_console"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/copy_console"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                style="?android:attr/buttonBarButtonStyle"
                android:drawableTop="?android:attr/actionModeCopyDrawable"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/clr_console"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                style="?android:attr/buttonBarButtonStyle"
                android:drawableTop="@android:drawable/ic_notification_clear_all"
                android:onClick="clearActions" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/output_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_red"
            android:contextClickable="true"
            android:ems="10"
            android:hint="Output"
            android:padding="5px"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:inputType=""
            android:importantForAutofill="no" />

        <LinearLayout
            android:id="@+id/action_output"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/copy_output"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:drawableTop="?android:attr/actionModeCopyDrawable"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/clr_output"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                style="?android:attr/buttonBarButtonStyle"
                android:drawableTop="@android:drawable/ic_notification_clear_all"
                android:onClick="clearActions" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
