<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="40">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/read_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="editActions"
            android:visibility="gone"
            app:backgroundTint="#CD141414"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_red"
            android:fadeScrollbars="false"
            android:scrollbarFadeDuration="0"
            android:scrollbarStyle="outsideOverlay"
            android:tooltipText="Long press to expand">

            <ScrollView
                android:id="@+id/verticalScrollView"
                style="@android:style/Widget.DeviceDefault.ScrollView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#272626"
                android:saveEnabled="true"
                android:scrollbarSize="8dp"
                android:scrollbarStyle="insideOverlay"
                android:touchscreenBlocksFocus="true">

                <com.classicloner.runjs.LinedEditText
                    android:id="@+id/input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:focusedByDefault="true"
                    android:fontFamily="sans-serif"
                    android:hint="@string/code_goes_here"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lineHeight="18sp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="50dp"
                    android:text="@string/script_sample"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/holo_blue_dark"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />
            </ScrollView>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/action_input"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/undo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_undo_white"
                android:focusable="true" />

            <Button
                android:id="@+id/redo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_redo_white"
                android:focusable="true" />

            <Button
                android:id="@+id/copy_input"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_content_copy_white"
                android:focusable="true"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/clr_input"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_clear_white"
                android:focusable="true"
                android:onClick="clearActions" />

        </LinearLayout>

        <EditText
            android:id="@+id/console_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/action_input"
            android:layout_marginEnd="198dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:ems="10"
            android:enabled="true"
            android:hint="Title"
            android:inputType="text"
            android:text="Untitled-blank"
            android:textAlignment="center"
            android:textColor="#566573"
            android:textSize="14sp"
            android:textStyle="normal|bold|italic" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jsButtons_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12.2"
        android:animateLayoutChanges="true"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/jsButtons"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="#272626"
            android:orientation="horizontal">

            <Button
                android:id="@+id/run"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_chevron_right"
                android:focusable="true"
                android:hint="@string/run_btn"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_save"
                android:focusable="true"
                android:hint="@string/save_btn"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/save_as"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_save"
                android:focusable="true"
                android:hint="@string/save_as_btn"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/load"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_attach_file"
                android:focusable="true"
                android:hint="@string/load_btn"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_clear_white"
                android:focusable="true"
                android:hint="@string/clear_btn"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/toggle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@android:drawable/ic_menu_more"
                android:focusable="true"
                android:hint="@string/toggle_btn"

                android:onClick="editActions"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/read"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_chrome_reader_mode"
                android:focusable="true"

                android:hint="@string/read_btn"
                android:onClick="editActions"
                android:textColorHint="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/console_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9.8"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#272626"
            android:contextClickable="true"
            android:ems="10"
            android:hint="@string/console_edittext"
            android:importantForAutofill="no"
            android:inputType=""
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/action_console"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/info_console"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_info_outline_white"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/copy_console"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_content_copy_white"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/clr_console"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_clear_white"
                android:onClick="clearActions" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/output_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="11"
        android:background="@drawable/border"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#272626"
            android:contextClickable="true"
            android:ems="10"
            android:hint="@string/output_edittext"
            android:importantForAutofill="no"
            android:inputType=""
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/action_output"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/copy_output"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-3dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_content_copy_white"
                android:onClick="clearActions" />

            <Button
                android:id="@+id/clr_output"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_clear_white"
                android:onClick="clearActions" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
